--- a/netlify.toml
+++ b/netlify.toml
@@ -11,4 +11,9 @@
 [[headers]]
   for = "/src/*"
   [headers.values]
-    Content-Type = "text/javascript" 
+    Content-Type = "text/javascript"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200 
